CS: fixes contrast issues with new background image

--- a/enoughcs/theme-modifications.css
+++ b/enoughcs/theme-modifications.css
@@ -26,7 +26,10 @@
 
 /* Overrides for specific kinds of pages */
 
+html.page-portrait .reveal,
+html.page-portrait .reveal a,
 html.page-portrait .reveal h1 {
+  color: #DDDDDD;
   text-shadow: 0 1px 0 #aaa, 0 2px 0 #a9a9a9, 0 3px 0 #999, 0 4px 0 #999999, 0 5px 0 #888, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15);
 }
 
@@ -101,7 +104,7 @@ html.page-portrait .reveal img.raw {
 }
 
 .doesitwork {
-  font-size: 0.2em;
+  font-size: 0.7em;
   position: fixed;
   bottom: 25px;
 }
